--- a/index.html
+++ b/index.html
@@ -9,8 +9,32 @@
   </head>
   <body>
   <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
-  <h1>myrepo</h1>
+  <header>
+    <img src="dist/img/LogoLiten.jpg" alt="Logo">
+    <h1>My Best Repo</h1>
+    <p>Yess Sir</p>
+  
+    <a href="#">Register to Attend</a>
+  </header>
 
+  <section id="countdown">
+    <ul>
+      <li>Years</li>
+      <li>Days</li>
+      <li>Hours</li>
+    </ul>
+  </section>
+
+  <section id="menu">
+    <h2>Menu</h2>
+    <p>Something menuish</p>
+  </section>
+      
+
+  <footer>
+    <small>&copy; 2015 Snacks in Space</small>
+  </footer>
+    
   <!-- AND ABOVE HERE -->
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="dist/scripts/main.js"></script>
