--- a/index.html
+++ b/index.html
@@ -28,13 +28,50 @@
   <section id="menu">
     <h2>Menu</h2>
     <p>Something menuish</p>
+  
+    <ul>
+      <li data-id="1">
+        <span class="menu-title">Veggie Burger</span>
+        <span class="menu-count">257</span>
+      </li>
+      <li data-id="2">
+        <span class="menu-title">Tofu Dog</span>
+        <span class="menu-count">192</span>
+      </li>
+      <li data-id="3">
+        <span class="menu-title">Watermelon</span>
+        <span class="menu-count">170</span>
+      </li>
+      <li data-id="4">
+        <span class="menu-title">Potato Salad</span>
+        <span class="menu-count">122</span>
+      </li>
+      <li data-id="5">
+        <span class="menu-title">Pasta Salad</span>
+        <span class="menu-count">99</span>
+      </li>
+      <li data-id="6">
+        <span class="menu-title">Grilled Vegetables</span>
+        <span class="menu-count">87</span>
+      </li>
+      <li data-id="7">
+        <span class="menu-title">Guacamole</span>
+        <span class="menu-count">56</span>
+      </li>
+      <li data-id="8">
+        <span class="menu-title">Corn</span>
+        <span class="menu-count">37</span>
+      </li>
+      <li data-id="9">
+        <span class="menu-title">Bulgar Salad</span>
+        <span class="menu-count">21</span>
+      </li>
+  </ul>    
   </section>
-      
 
   <footer>
-    <small>&copy; 2015 Snacks in Space</small>
+    <small>&copy; 2016 Snacks in Space</small>
   </footer>
-    
   <!-- AND ABOVE HERE -->
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="dist/scripts/main.js"></script>
