--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
   </head>
   <body>
   <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
-  <header>
+  <header class="header-container">
+    <div class="wrap">
     <img src="dist/img/LogoLiten.jpg" alt="Logo">
     <h1>My Best Repo</h1>
     <p>Yess Sir</p>
   
     <a href="#">Register to Attend</a>
+  </div>
   </header>
 
-  <section id="countdown">
+  <section id="countdown" class="countdown-container">
+    <div class="wrap">
     <ul>
       <li>Years</li>
       <li>Days</li>
       <li>Hours</li>
     </ul>
+  </div>
   </section>
 
-  <section id="menu">
+  <section id="menu" class="section-container">
+    <div class="wrap">
     <h2>Menu</h2>
     <p>Something menuish</p>
   
@@ -66,11 +71,14 @@
         <span class="menu-title">Bulgar Salad</span>
         <span class="menu-count">21</span>
       </li>
-  </ul>    
+  </ul>
+  </div>
   </section>
 
-  <footer>
+  <footer class="footer-container">
+    <div class="wrap">
     <small>&copy; 2016 Snacks in Space</small>
+  </div>
   </footer>
   <!-- AND ABOVE HERE -->
   <script src="node_modules/jquery/dist/jquery.js"></script>
