--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <h1>My Best Repo</h1>
     <p>Yess Sir</p>
   
-    <a href="#">Register to Attend</a>
+    <a class="btn" href="#">Register to Attend</a>
   </div>
   </header>
 
   <section id="countdown" class="countdown-container">
     <div class="wrap">
-    <ul>
+    <ul class="section-list">
       <li>Years</li>
       <li>Days</li>
       <li>Hours</li>
@@ -29,12 +29,12 @@
   </div>
   </section>
 
-  <section id="menu" class="section-container">
+  <section id="menu" class="menu-container">
     <div class="wrap">
-    <h2>Menu</h2>
+    <h2 class="section-heading">Menu</h2>
     <p>Something menuish</p>
   
-    <ul>
+    <ul class="section-list">
       <li data-id="1">
         <span class="menu-title">Veggie Burger</span>
         <span class="menu-count">257</span>
