--- a/index.html
+++ b/index.html
@@ -34,42 +34,33 @@
     <h2 class="section-heading">Menu</h2>
     <p>Something menuish</p>
   
-    <ul class="section-list">
-      <li data-id="1">
-        <span class="menu-title">Veggie Burger</span>
-        <span class="menu-count">257</span>
+    <ul class="section-list menu-list">
+      <li class="link" data-id="1">
+        <span class="menu-title">Veggie Burger</span><span class="menu-count">257</span>
       </li>
-      <li data-id="2">
-        <span class="menu-title">Tofu Dog</span>
-        <span class="menu-count">192</span>
+      <li class="link" data-id="2">
+        <span class="menu-title">Tofu Dog</span><span class="menu-count">192</span>
       </li>
-      <li data-id="3">
-        <span class="menu-title">Watermelon</span>
-        <span class="menu-count">170</span>
+      <li class="link" data-id="3">
+        <span class="menu-title">Watermelon</span><span class="menu-count">170</span>
       </li>
-      <li data-id="4">
-        <span class="menu-title">Potato Salad</span>
-        <span class="menu-count">122</span>
+      <li class="link" data-id="4">
+        <span class="menu-title">Potato Salad</span><span class="menu-count">122</span>
       </li>
-      <li data-id="5">
-        <span class="menu-title">Pasta Salad</span>
-        <span class="menu-count">99</span>
+      <li class="link" data-id="5">
+        <span class="menu-title">Pasta Salad</span><span class="menu-count">99</span>
       </li>
-      <li data-id="6">
-        <span class="menu-title">Grilled Vegetables</span>
-        <span class="menu-count">87</span>
+      <li class="link" data-id="6">
+        <span class="menu-title">Grilled Vegetables</span><span class="menu-count">87</span>
       </li>
-      <li data-id="7">
-        <span class="menu-title">Guacamole</span>
-        <span class="menu-count">56</span>
+      <li class="link" data-id="7">
+        <span class="menu-title">Guacamole</span><span class="menu-count">56</span>
       </li>
-      <li data-id="8">
-        <span class="menu-title">Corn</span>
-        <span class="menu-count">37</span>
+      <li class="link" data-id="8">
+        <span class="menu-title">Corn</span><span class="menu-count">37</span>
       </li>
-      <li data-id="9">
-        <span class="menu-title">Bulgar Salad</span>
-        <span class="menu-count">21</span>
+      <li class="link" data-id="9">
+        <span class="menu-title">Bulgar Salad</span><span class="menu-count">21</span>
       </li>
   </ul>
   </div>
