--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <section id="countdown" class="countdown-container">
     <div class="wrap">
-    <ul class="section-list">
+    <ul class="section-list countdown-list">
       <li>Years</li>
       <li>Days</li>
       <li>Hours</li>
@@ -72,7 +72,6 @@
   </div>
   </footer>
   <!-- AND ABOVE HERE -->
-  <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="dist/scripts/main.js"></script>
   </body>
 </html>
